--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,16 @@
         <title>First Blog</title>
     </head>
     <body>
-        <p>Does this work?</p>
+        <header>
+            <h1><a href="/">Django blog</a></h1>
+        </header>
+
+        {% for post in posts %}
+        <article>
+            <time>published: {{post.published_date}} </time>
+            <h2><a href="">{{post.title}} </a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </article>
+        {% endfor %}
     </body>
 </html>
