--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Django blog</title>
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
                     {% include './icons/file-earmark-plus.svg' %}
                 </a>
                 {% endif %}
-                <h1><a href="/">Django Girls Blog</a></h1>
+                <h1><a href="/">Django Blog</a></h1>
             </div>
         </header>
         <main class="content container">
